styles.css
* General Reset */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Inter', sans-serif;
    background-color: #000000;
    color: #ffffff;
    scroll-behavior: smooth;
}

h1, h2, .logo {
    font-family: 'Playfair Display', serif;

}
.nav-links :hover{
    background-color: #d4af37;
    padding: 10px;
    }

.container {
    max-width: 800px;
    margin: 0 auto;
    padding: 0 20px;
}

/* Nav */
nav {
    display: flex;
    justify-content: space-between;
    padding: 20px;
    background: #0e0d0d;
    border-bottom: 1px solid #222;
    text-align: center;
}

.logo { color: #d4af37; font-size: 1.5rem; letter-spacing: 2px; }
.nav-links { display: flex; list-style: none; }
.nav-links li { margin-left: 20px; }
.nav-links a { color: #fff; text-decoration: none; font-size: 0.8rem; text-transform: uppercase; }

/* Hero */
.hero {
    height: 60vh;
    display: flex;
    align-items: center;
    justify-content: center;
    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('assets/images/hero.jpg') center/cover;
}

.gold { color: #d4af37; }

/* Intro Section */
.intro { padding: 5rem 0; text-align: center; background: #151515; }
.intro h2 { color: #d4af37; margin-bottom: 1.5rem; }
.intro p { font-size: 1.1rem; line-height: 1.8; opacity: 0.9; }

/* Gallery */
.gallery-container {
    padding: 40px 5%;
    text-align: center;
}

.gallery-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 20px;
}

.photo-card {
    overflow: hidden;
    border-radius: 8px;
}

.photo-card img {
    width: 100%;
    height: 300px;
    object-fit: cover;
    transition: 0.5s;
}

.photo-card:hover img {
    transform: scale(1.1);
}

